criação de jwt separado